[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "openai-whisper",
    "sounddevice",
    "numpy>=1.26.0",
    "scipy",
    "livekit-wakeword>=0.1.3",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.16.0",
    "yyaml>=0.0.1",
]
